--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,6 +37,7 @@
             height: 48px;
             background-color: #aa010e;
             margin-left: 10px;
+            cursor: pointer;
             float: right;
         }
         .stand{
@@ -44,13 +45,15 @@
             height: 48px;
             background-color: #053a7a;
             margin-left: 10px;
+            cursor: pointer;
             float: right;
         }
         .language{
             width: 48px;
             height: 48px;
             background-color: #3e3a39;
-            margin-left: 10px;  
+            margin-left: 10px; 
+            cursor: pointer; 
             float: right;          
         }
         .language.cur{
@@ -62,13 +65,22 @@
             height: 48px;
             background-color: #fff;  
             overflow: hidden;
+            position: relative;
+            z-index: 9;
             float: right;   
             .logo_box{
-                width: 80px;
+                width: 100%;
+                padding: 4px 15px;
+                box-sizing: border-box;
                 .list{
                     display: block;
-                    height: 48px;
+                    width: 100%;
+                    height: 40px;
                     margin-top: 10px;
+                    cursor: pointer;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .list:first-child{
                     margin-top: 0;
@@ -77,6 +89,484 @@
         }
         .logo_list:hover{
             height: auto;
+        }
+    }
+}
+// logo+倒计时
+.count_logo_box{
+    width: 100%;
+    height: 168px;
+    overflow: hidden;
+    .center_box{
+        width: 1248px;
+        height: 168px;
+        margin: 0 auto;
+        position: relative;
+        overflow: hidden;
+    }
+    .time_left{
+        width: 620px;
+        height: 128px;
+        padding: 20px 0;
+        text-align: center;
+        overflow: hidden;
+        float: left;
+        .logo{
+            width: 128px;
+            height: 128px;
+            overflow: hidden;
+            float: left;
+        }
+        .title{
+            width: 250px;
+            height: 128px;
+            padding-top: 40px;
+            box-sizing: border-box;
+            text-align: center;
+            overflow: hidden;
+            float: left;
+            .text{
+                font-size: 20px;
+                height: 26px;
+                line-height: 26px;
+                color: #000;
+                font-weight: 600;
+            }
+        }
+        .time_count{
+            width: 240px;
+            height: 128px;
+            padding: 47px 0 0 23px;
+            box-sizing: border-box;
+            overflow: hidden;
+            float: left;
+            .time{
+                width: 95px;
+                height: 34px;
+                line-height: 34px;
+                font-size: 34px;
+                color: #000;
+                font-weight: 600;
+                letter-spacing: 10px;
+                text-indent: 8px;
+                border-left: 2px solid #e1e1e1;
+                border-right: 2px solid #ebebeb;
+                float: left;
+            }
+            .day{
+                margin-left: 10px;
+                line-height: 34px;
+                font-size: 18px;
+                color: #000;
+                float: left;
+            }   
+        }
+    }
+    .logo_right{
+        width: 628px;
+        height: 128px;
+        padding: 20px 0;
+        text-align: center;
+        overflow: hidden;
+        float: right;
+        .title{
+            width: 100%;
+            height: 38px;
+            line-height: 38px;
+            font-size: 20px;
+            text-align: left;
+            overflow: hidden;
+        }
+        .logo_list{
+            width: 100%;
+            height: 90px;                  
+            overflow: hidden;
+            .item{
+                height: 100%;
+                display: flex;
+                justify-content:center; 
+                align-items: center;                  
+                overflow: hidden;
+                float: left;
+            }
+            .left{
+                width: 70px;
+            }
+            .center{
+                width: 358px;
+            }
+            .right{
+                width: 200px;
+                float: right;
+            }
+        }
+    }    
+}
+// banner
+.banner_box{
+    width: 100%;
+    height: 400px;
+    background-color: #e50012;
+    overflow: hidden;
+    position: relative;
+    .center{
+        width: 1920px;
+        height: 100%;
+        margin-left: -960px;
+        position: absolute;
+        left: 50%;
+        top: 0;
+        z-index: 2;
+    }
+}
+// 内容
+.page_content{
+    width: 1248px;
+    overflow: hidden;
+    margin: 0 auto;
+    .text_box{
+        width: 100%;
+        text-align: center;
+        padding: 40px 0 60px;
+        overflow: hidden;
+        .title{
+            width: 100%;
+            height: 88px;
+            line-height: 88px;
+            font-size: 36px;
+            font-weight: 800;
+            color: #000;
+        }
+        .fonts{
+            width: 100%;
+            line-height: 32px;
+            font-size: 18px;
+            color: #000;
+        }
+    }
+    .list_block{
+        width: 100%;
+        overflow: hidden;
+        .item{
+            width: 400px;
+            height: 400px;
+            margin-left: 24px;
+            margin-bottom: 24px;
+            float: left;
+            img{
+                cursor: pointer;
+            }
+        }
+        .item:nth-of-type(3n+1){
+            margin-left: 0;
+        }
+        .open_time,.link_us{
+            width: 100%;
+            padding-top: 90px;
+            color: #fff;
+            text-align: center;
+            overflow: hidden;
+            .title{
+                font-size: 24px;
+                height: 88px;
+                line-height: 88px;
+            }
+            .time_list{
+                font-size: 18px;
+                height: 32px;
+                line-height: 32px;
+            }
+        }
+        .new_list{
+            padding: 0 25px;
+            background-color: #053a7a;
+            overflow: hidden;
+            .list{
+                width: 100%;
+                padding: 38px 0;
+                cursor: pointer;
+                overflow: hidden;
+                .img{
+                    width: 120px;
+                    height: 120px;
+                    overflow: hidden;
+                    float: left;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                .text{
+                    width: 210px;
+                    color: #fff;
+                    overflow: hidden;
+                    float: right;
+                    .title{
+                        width: 100%;
+                        font-size: 16px;
+                        line-height: 18px;
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 2;
+                    }
+                    .fonts{
+                        width: 100%;
+                        font-size: 12px;
+                        line-height: 14px; 
+                        margin-top: 10px;  
+                        display: -webkit-box;
+                        -webkit-box-orient: vertical;
+                        -webkit-line-clamp: 5;                     
+                    }
+                }
+            }
+            .list:first-child{
+                border-bottom: 1px dashed #fff; 
+            }
+        }
+        .link_list{
+            width: 198px;
+            overflow: hidden;
+            margin: 0 auto;
+            .wechat{
+                width: 80px;
+                height: 80px;
+                background: url("../assets/index_06.png") center no-repeat;
+                background-color: #fff;
+                cursor: pointer;
+                overflow: hidden;
+                float: left;
+            }
+            .facebook{
+                width: 80px;
+                height: 80px;
+                background: url("../assets/index_19.png") center no-repeat;
+                background-color: #fff;
+                cursor: pointer;
+                overflow: hidden;
+                float: right;
+            }           
+        }
+    }
+}
+// 展示栏
+.show_list_box{
+    width: 1248px;
+    padding-top: 30px;
+    padding-bottom: 16px;
+    overflow: hidden;
+    position: relative;
+    margin: 0 auto;
+    .title{
+        width: 100;
+        height: 54px;
+        line-height: 54px;
+        font-size: 30px;
+        color: #000;
+        font-weight: 600;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;         
+    }
+    .show_number{
+        width: 100%;
+        padding-bottom: 44px;
+        overflow: hidden;
+        .number_list{
+            padding: 15px 0 20px;
+            text-align: center;
+            overflow: hidden;
+            .item{
+                width: 65px;
+                color: #99c492;
+                float: left;
+            }
+            .num{
+                width: 100%;
+                height: 68px;
+                line-height: 68px;
+                font-size: 58px;
+            }
+            .tips{
+                height: 28px;
+                line-height: 28px;
+                font-size: 14px;
+                color: #000;
+            }
+            .att{
+                width: 240px;
+                margin-left: 40px;
+                color: #4db3c5;
+            }
+            .exh{
+                width: 215px;
+                color: #e50011;
+            }
+            .spe{
+                width: 185px;
+                color: #ee83ce;
+            }
+            .ses{
+                width: 178px;
+                color: #7979a5;
+            }  
+            .are{
+                width: 266px;
+                color: #053a7a;                
+            }                      
+        }
+    }
+    .with_logo_box{
+        width: 100%;
+        overflow: hidden;
+        .logo_list{
+            padding: 30px 0 20px;
+            overflow: hidden;
+            .item{
+                width: 196px;
+                height: 78px;
+                margin-right: 12px;
+                margin-bottom: 12px;
+                background-color: #ebebeb;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
+                float: left;
+            }
+        }
+    }
+}
+
+// 底栏
+.page_bottom_box{
+    width: 100%;
+    padding: 46px 0 60px;
+    background-color: #ebebeb;
+    overflow: hidden;
+    .bottom_center{
+        width: 702px;
+        margin: 0 auto;
+    }
+    .nav_list{
+        width: 100%;
+        text-align: center;
+        overflow: hidden;
+        .item{
+            float: left;
+            width: 176px;
+            height: 52px;
+            line-height: 52px;
+            font-size: 14px;
+            color: #000;
+            font-weight: 600;
+            span{
+                cursor: pointer;
+            }
+        }
+        .long{
+            width: 350px;
+        }
+        .red{
+            color: #e50012;
+        }
+    }
+    .bth_list{
+        width: 100%;
+        height: 100px;;
+        padding: 36px 0 46px;
+        text-align: center;
+        overflow: hidden;
+        .item{
+            float: left;
+            width: 176px;
+            height: 100%;
+        }
+        .logo{
+            float: left;
+            width: 350px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;            
+        }
+        .bth{
+            display: block;
+            width: 100%;
+            height:48px;
+            line-height: 48px;
+            font-size: 14px;
+            color: #fff;
+            font-weight: 600;  
+            margin-top: 36px;   
+            cursor: pointer;       
+        }                    
+    }
+    .link_list{
+        width: 260px;
+        height: 60px;
+        overflow: hidden;
+        margin: 0 auto;
+        .item{
+            width: 60px;
+            height: 60px;
+            overflow: hidden;
+            float: left;
+            margin-right: 40px;
+            cursor: pointer;
+        }
+        .item:last-child{
+            margin-right: 0;
+        }
+        .wechat{
+            background: url("../assets/index_50.png") center no-repeat;
+            background-color: #fff;
+        }
+        .facebook{
+            background: url("../assets/index_53.png") center no-repeat;
+            background-color: #fff;
+        }
+        .rss{
+            background: url("../assets/index_55.png") center no-repeat;
+            background-color: #fff;
+        }            
+    }
+    .authentication{
+        width: 100%;
+        height: 44px;
+        margin-top: 50px;
+        background: url("../assets/index_61.png") center no-repeat;
+        overflow: hidden;
+    }
+    .reference{
+        width: 100%;
+        height: 52px;
+        line-height: 52px;
+        font-size: 14px;
+        color: #939393;
+        text-align: center;
+    }
+}
+// 悬浮层
+.layou_box{
+    position: fixed;
+    top: 90px;
+    right: 0;
+    z-index: 199;
+    .list_box{
+        width: 60px;
+        background-color: #ebebeb;
+        overflow: hidden;
+        .item{
+            width: 100%;
+            height: 60px;
+            cursor: pointer;
+        }
+        .wechat{
+            background: url("../assets/index_06.png") center no-repeat;
+        }
+        .facebook{
+            background: url("../assets/index_19.png") center no-repeat;
         }
     }
 }
