--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -100,4 +100,12 @@ img{
     top: 0;
     z-index: 999;
 }
+.fixed_pos{
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
 @import "index.scss";
