--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -641,17 +641,14 @@
     height: 420px;
     padding: 30px;
     background-color: #fff;
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     .close{
         width: 32px;
         height: 32px;
         background: url("../assets/close.png") center no-repeat;
-        float: right;
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        z-index: 2;
         cursor: pointer;
     }
     .qrcode{
@@ -668,5 +665,108 @@
         font-size: 24px;
         color: #000;
         text-align: center;
+    }
+}
+
+// 订阅弹层
+.layou_rss_box{
+    width: 540px;
+    height: 680px;
+    padding: 30px 40px;
+    background-color: #fff;
+    .close{
+        width: 27px;
+        height: 27px;
+        background: url("../assets/close.png") center no-repeat;
+        background-size: 27px;
+        position: absolute;
+        top: 30px;
+        right: 40px;
+        z-index: 2;
+        cursor: pointer;
+    } 
+    .title{
+        width: 100%;
+        height: 46px;
+        line-height: 46px;
+        padding-top: 27px;
+        font-size: 24px;
+        color: #000;
+        font-weight: 600;
+        overflow: hidden;
+    } 
+    .list_box{
+        width: 100%;
+        padding-top: 28px;
+        overflow: hidden;
+        .item{
+            padding-top: 6px;
+            position: relative;
+            .name{
+                width: 100%;
+                height: 50px;
+                line-height: 50px;
+                font-size: 24px;
+                text-align: left;
+            }
+            .input_box{
+                width: 100%;
+                height: 56px;
+                line-height: 56px;
+                text-indent: 7px;
+                font-size: 20px;
+                color: #000;
+                border: 1px solid #b5b5b5;
+                box-sizing: border-box;
+            }
+            .input_box:focus{
+                border: 1px solid #409eff;
+            }
+            .pill_box{
+                position: relative;
+                .pull_icon{
+                    width: 30px;
+                    height: 20px;
+                    background: url("../assets/down.png") center no-repeat;
+                    position: absolute;
+                    top: 18px;
+                    right: 30px;
+                    z-index: 3;
+                }                
+            }
+            .pull_down{
+                width: 100%;
+                overflow: hidden;
+                position: absolute;
+                border: 1px solid #b5b5b5;
+                box-sizing: border-box;
+                background-color: #fff;
+                top: 50px;
+                left: 0;
+                z-index: 2;
+                .sex{
+                    width: 100%;
+                    height: 36px;
+                    line-height: 36px;
+                    text-indent: 7px;
+                    font-size: 20px;
+                    color: #333;                    
+                }
+                .sex:hover{
+                    background-color: #ebebeb;
+                }
+            }
+            .Submit{
+                width: 100%;
+                height: 56px;
+                line-height: 56px;
+                color: #fff;
+                font-size: 20px;
+                text-align: center;
+                background-color: #aa010e;
+                margin-top: 47px;
+                cursor: pointer;
+            }
+        }
     }
 }
