--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,6 +87,18 @@ img{
 .mt20{
     margin-top: 20px;
 }
+.mt25{
+    margin-top: 25px;
+}
+.mt30{
+    margin-top: 30px;
+}
+.mt40{
+    margin-top: 40px;
+}
+.mt50{
+    margin-top: 50px;
+}
 .red{
     color: #e50012;
 }
@@ -109,3 +121,4 @@ img{
     right: 0;
 }
 @import "index.scss";
+@import "contact.scss";
