--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -102,6 +102,24 @@ img{
 .red{
     color: #e50012;
 }
+.line1{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+}
+.line2{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.line3{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
 .layou_fixed{
     width: 100%;
     height: 100%;
@@ -122,3 +140,5 @@ img{
 }
 @import "index.scss";
 @import "contact.scss";
+@import "press.scss";
+@import "products.scss";
