--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -7,13 +7,27 @@
     }
     .search_box{
         width: 100%;
+        font-size: 20px;
+        color: #000;
         overflow: hidden;
+        .duble_input{
+            width: 1086px;
+            margin-left: 80px;
+            margin-bottom: 20px;
+            overflow: hidden;
+            .text_ipt{
+                width: 526px;
+                height: 58px;
+                line-height: 58px;
+                border: 1px solid #b5b5b6;
+                text-indent: 10px;
+                overflow: hidden;
+            }
+        }
         .search_ipt{
             width: 1084px;
             height: 58px;
             line-height: 58px;
-            font-size: 20px;
-            color: #000;
             border: 1px solid #b5b5b6;
             margin-left: 80px;
             text-indent: 10px;
@@ -72,6 +86,45 @@
             .number{
                 font-size: 12px;
                 line-height: 18px;  
+            }             
+        }
+        .item:nth-of-type(5n+0){
+            margin-right: 0;
+        }
+    }
+    .visit_list{
+        width: 100%;
+        overflow: hidden;
+        .item{
+            width: 224px;
+            margin-top: 70px;
+            margin-right: 32px;
+            overflow: hidden;
+            float: left;
+            .logo_box{
+                width: 100%;
+                height: 90px;
+                background-color: #bebebe;
+                overflow: hidden;
+            }
+            .fonts_box{
+                width: 100%;
+                color: #000;
+                font-size: 14px;
+                overflow: hidden;
+            }
+            .title{
+                margin-top: 12px;
+                line-height: 18px;
+            }
+            .tips{
+                font-size: 12px;
+                line-height: 18px; 
+                color: #727171;           
+            }
+            .number{
+                font-size: 12px;
+                line-height: 24px;  
             }             
         }
         .item:nth-of-type(5n+0){
