--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -143,3 +143,6 @@ img{
 @import "press.scss";
 @import "products.scss";
 @import "speakers.scss";
+@import "sessions.scss";
+@import "travel.scss";
+@import "supporters.scss";
