--- a/src/scss/press.scss
+++ b/src/scss/press.scss
@@ -2,6 +2,9 @@
 .press{
     padding-bottom: 110px;
     position: relative;
+    img{
+        width: 100%;
+    }   
     .press_left{
         width: 824px;
         overflow: hidden;
@@ -35,7 +38,7 @@
             width: 100%;
             height: 100px;
             background-color: #bebebe;
-            overflow: hidden;            
+            overflow: hidden;         
         }
         .fonts_box{
             width: 100%;
@@ -44,10 +47,12 @@
             text-align: left; 
             overflow: hidden;  
             .title{
+                height: 36px;
                 font-size: 14px;
                 line-height: 18px;
             }   
             .details{
+                height: 54px;
                 margin-top: 6px;
                 font-size: 12px;
                 line-height: 18px;            
