--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -132,6 +132,7 @@ img{
     right: 0;
 }
 @import "base/nav.scss";
+@import "base/banner.scss";
 @import "base/common.scss";
 @import "base/bottom.scss";
 @import "base/wechat.scss";
