--- a/src/scss/stand.scss
+++ b/src/scss/stand.scss
@@ -1,149 +1,17 @@
 // contact page scss
-.stand{
-    .text_box{
-        text-align: center;
-        padding-bottom: 0;
-    }
-    .center_box{
-        width: 100%;
-        padding-top: 20px;
-        padding-bottom: 80px;
-        overflow: hidden;
-        .input_list{
-            width: 100%;
-            overflow: hidden;
-            .item{
-                width: 100%;
-                overflow: hidden;
-            }
-            .title{
-                width: 100%;
-                height: 60px;
-                line-height: 60px;
-                font-size: 20px;
-                color: #000;
-                overflow: hidden;
-            }
-            input{
-                width: 518px;
-                height: 52px;
-                line-height: 52px;
-                font-size: 16px;
-                text-indent: 10px;
-                border: 1px solid #b5b5b6;
-                overflow: hidden;
-            }
+.pc_box{
+    .stand{
+        .text_box{
+            text-align: center;
+            padding-bottom: 0;
         }
-        .product_box{
+        .center_box{
             width: 100%;
-            margin-top: 35px;
+            padding-top: 20px;
+            padding-bottom: 80px;
             overflow: hidden;
-            .title{
-                width: 100%;
-                height: 66px;
-                line-height: 66px;
-                font-size: 30px;
-                color: #000;
-                overflow: hidden;
-            }  
-            .check_list{
-                width: 100%;
-                overflow: hidden;   
-                .item{
-                    width: 100%;
-                    margin-top: 18px;
-                    overflow: hidden;                    
-                }  
-                .unselected{
-                    display: block;
-                    width: 30px;
-                    height: 30px;
-                    border: 1px solid #b5b5b5;
-                    background-color: #fff;
-                    overflow: hidden;
-                    float: left;
-                } 
-                .selected{
-                    display: block;
-                    width: 32px;
-                    height: 32px;
-                    background: url(../assets/select.png) center no-repeat;
-                    overflow: hidden;
-                    float: left;
-                } 
-                .text{
-                    padding-left: 20px;
-                    height: 32px;
-                    line-height: 32px;
-                    font-size: 20px;
-                    color: #000;
-                    overflow: hidden;
-                    float: left;
-                }
-                input{
-                    width: 460px;
-                    height: 52px;
-                    line-height: 52px;
-                    font-size: 16px;
-                    text-indent: 10px;
-                    border: 1px solid #b5b5b6;
-                    overflow: hidden;
-                    margin-left: 52px;
-                }         
-            }          
-        }
-        .booth_box{
-            width: 100%;
-            margin-top: 45px;
-            overflow: hidden;
-            .title{
-                width: 100%;
-                height: 66px;
-                line-height: 66px;
-                font-size: 30px;
-                color: #000;
-                overflow: hidden;
-            }  
-            .check_list{
-                width: 100%;
-                overflow: hidden;   
-                .item{
-                    width: 320px;
-                    margin-top: 18px;
-                    overflow: hidden;  
-                    float: left;                  
-                }  
-                .unselected{
-                    display: block;
-                    width: 30px;
-                    height: 30px;
-                    border: 1px solid #b5b5b5;
-                    background-color: #fff;
-                    overflow: hidden;
-                    float: left;
-                } 
-                .selected{
-                    display: block;
-                    border: none;
-                    width: 32px;
-                    height: 32px;
-                    background: url(../assets/select.png) center no-repeat;
-                    overflow: hidden;
-                    float: left;
-                } 
-                .text{
-                    padding-left: 20px;
-                    height: 32px;
-                    line-height: 32px;
-                    font-size: 20px;
-                    color: #000;
-                    overflow: hidden;
-                    float: left;
-                }        
-            } 
             .input_list{
                 width: 100%;
-                margin-top: 40px;
                 overflow: hidden;
                 .item{
                     width: 100%;
@@ -166,40 +34,386 @@
                     border: 1px solid #b5b5b6;
                     overflow: hidden;
                 }
-            } 
-            .tips{
+            }
+            .product_box{
                 width: 100%;
-                height: 70px;
-                line-height: 70px;
-                font-size: 18px;
-                color: #000;
+                margin-top: 35px;
                 overflow: hidden;
-            }                    
-        }
-        .bth_list{
-            width: 100%;
-            padding-top: 35px;
-            overflow: hidden;
-            .bth{
-                display: block;
-                width: 334px;
-                height: 56px;
-                line-height: 56px;
-                color: #fff;
-                font-size: 22px;
+                .title{
+                    width: 100%;
+                    height: 66px;
+                    line-height: 66px;
+                    font-size: 30px;
+                    color: #000;
+                    overflow: hidden;
+                }  
+                .check_list{
+                    width: 100%;
+                    overflow: hidden;   
+                    .item{
+                        width: 100%;
+                        margin-top: 18px;
+                        overflow: hidden;                    
+                    }  
+                    .unselected{
+                        display: block;
+                        width: 30px;
+                        height: 30px;
+                        border: 1px solid #b5b5b5;
+                        background-color: #fff;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .selected{
+                        display: block;
+                        width: 32px;
+                        height: 32px;
+                        background: url(../assets/select.png) center no-repeat;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .text{
+                        padding-left: 20px;
+                        height: 32px;
+                        line-height: 32px;
+                        font-size: 20px;
+                        color: #000;
+                        overflow: hidden;
+                        float: left;
+                    }
+                    input{
+                        width: 460px;
+                        height: 52px;
+                        line-height: 52px;
+                        font-size: 16px;
+                        text-indent: 10px;
+                        border: 1px solid #b5b5b6;
+                        overflow: hidden;
+                        margin-left: 52px;
+                    }         
+                }          
+            }
+            .booth_box{
+                width: 100%;
+                margin-top: 45px;
                 overflow: hidden;
-                text-align: center;
-                cursor: pointer;
-                float: left;
+                .title{
+                    width: 100%;
+                    height: 66px;
+                    line-height: 66px;
+                    font-size: 30px;
+                    color: #000;
+                    overflow: hidden;
+                }  
+                .check_list{
+                    width: 100%;
+                    overflow: hidden;   
+                    .item{
+                        width: 320px;
+                        margin-top: 18px;
+                        overflow: hidden;  
+                        float: left;                  
+                    }  
+                    .unselected{
+                        display: block;
+                        width: 30px;
+                        height: 30px;
+                        border: 1px solid #b5b5b5;
+                        background-color: #fff;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .selected{
+                        display: block;
+                        border: none;
+                        width: 32px;
+                        height: 32px;
+                        background: url(../assets/select.png) center no-repeat;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .text{
+                        padding-left: 20px;
+                        height: 32px;
+                        line-height: 32px;
+                        font-size: 20px;
+                        color: #000;
+                        overflow: hidden;
+                        float: left;
+                    }        
+                } 
+                .input_list{
+                    width: 100%;
+                    margin-top: 40px;
+                    overflow: hidden;
+                    .item{
+                        width: 100%;
+                        overflow: hidden;
+                    }
+                    .title{
+                        width: 100%;
+                        height: 60px;
+                        line-height: 60px;
+                        font-size: 20px;
+                        color: #000;
+                        overflow: hidden;
+                    }
+                    input{
+                        width: 518px;
+                        height: 52px;
+                        line-height: 52px;
+                        font-size: 16px;
+                        text-indent: 10px;
+                        border: 1px solid #b5b5b6;
+                        overflow: hidden;
+                    }
+                } 
+                .tips{
+                    width: 100%;
+                    height: 70px;
+                    line-height: 70px;
+                    font-size: 18px;
+                    color: #000;
+                    overflow: hidden;
+                }                    
             }
-            .submit{
-                background-color: #aa010e;
-                margin-right: 40px;
-            }
-            .reset{
-                background-color: #053a7a;
-            }
-        }       
-    }    
-
+            .bth_list{
+                width: 100%;
+                padding-top: 35px;
+                overflow: hidden;
+                .bth{
+                    display: block;
+                    width: 334px;
+                    height: 56px;
+                    line-height: 56px;
+                    color: #fff;
+                    font-size: 22px;
+                    overflow: hidden;
+                    text-align: center;
+                    cursor: pointer;
+                    float: left;
+                }
+                .submit{
+                    background-color: #aa010e;
+                    margin-right: 40px;
+                }
+                .reset{
+                    background-color: #053a7a;
+                }
+            }       
+        }    
+    
+    }
 }
+// mobile
+.mobile_box{
+    .stand{
+        .text_box{
+            text-align: center;
+            padding-bottom: 0;
+        }
+        .center_box{
+            width: 100%;
+            padding: .2rem .2rem .8rem;
+            box-sizing: border-box;
+            overflow: hidden;
+            .input_list{
+                width: 100%;
+                overflow: hidden;
+                .item{
+                    width: 100%;
+                    overflow: hidden;
+                }
+                .title{
+                    width: 100%;
+                    height: .6rem;
+                    line-height: .6rem;
+                    font-size: .2rem;
+                    color: #000;
+                    overflow: hidden;
+                }
+                input{
+                    width: 100%;
+                    height: .68rem;
+                    line-height: .68rem;
+                    font-size: .2rem;
+                    text-indent: 10px;
+                    border: 1px solid #b5b5b6;
+                    box-sizing: border-box;
+                    overflow: hidden;
+                }
+            }
+            .product_box{
+                width: 100%;
+                margin-top: .5rem;
+                overflow: hidden;
+                .title{
+                    width: 100%;
+                    height: .38rem;
+                    line-height: .38rem;
+                    font-size: .26rem;
+                    color: #000;
+                    overflow: hidden;
+                }  
+                .check_list{
+                    width: 100%;
+                    overflow: hidden;   
+                    .item{
+                        width: 100%;
+                        margin-top: .3rem;
+                        margin-bottom: .15rem;
+                        overflow: hidden;                    
+                    }  
+                    .unselected{
+                        display: block;
+                        width: .4rem;
+                        height: .4rem;
+                        border: 1px solid #b5b5b5;
+                        background-color: #fff;
+                        overflow: hidden;
+                        box-sizing: border-box;
+                        float: left;
+                    } 
+                    .selected{
+                        display: block;
+                        width: .4rem;
+                        height: .4rem;
+                        background: url(../assets/select.png) center no-repeat;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .text{
+                        width: calc(100% - .6rem);
+                        line-height: .4rem;
+                        font-size: .2rem;
+                        color: #000;
+                        overflow: hidden;
+                        float: right;
+                    }
+                    input{
+                        width: calc(100% - .6rem);
+                        height: .68rem;
+                        line-height: .68rem;
+                        font-size: .2rem;
+                        text-indent: 10px;
+                        border: 1px solid #b5b5b6;
+                        box-sizing: border-box;
+                        overflow: hidden;
+                        margin-left: .6rem;
+                    }         
+                }          
+            }
+            .booth_box{
+                width: 100%;
+                margin-top: .6rem;
+                overflow: hidden;
+                .title{
+                    width: 100%;
+                    height: .32rem;
+                    line-height: .32rem;
+                    font-size: .26rem;
+                    color: #000;
+                    overflow: hidden;
+                }  
+                .check_list{
+                    width: 100%;
+                    margin-top: .4rem;
+                    overflow: hidden;   
+                    .item{
+                        width: 50%;
+                        overflow: hidden;  
+                        float: left;                  
+                    }  
+                    .unselected{
+                        display: block;
+                        width: .4rem;
+                        height: .4rem;
+                        border: 1px solid #b5b5b5;
+                        background-color: #fff;
+                        overflow: hidden;
+                        box-sizing: border-box;
+                        float: left;
+                    } 
+                    .selected{
+                        display: block;
+                        border: none;
+                        width: .4rem;
+                        height: .4rem;
+                        background: url(../assets/select.png) center no-repeat;
+                        overflow: hidden;
+                        float: left;
+                    } 
+                    .text{
+                        padding-left: .2rem;
+                        height: .4rem;
+                        line-height: .4rem;
+                        font-size: .26rem;
+                        color: #000;
+                        overflow: hidden;
+                        float: left;
+                    }        
+                } 
+                .input_list{
+                    width: 100%;
+                    margin-top: .6rem;
+                    overflow: hidden;
+                    .item{
+                        width: 100%;
+                        overflow: hidden;
+                    }
+                    .title{
+                        width: 100%;
+                        height: .6rem;
+                        line-height: .6rem;
+                        font-size: .26rem;
+                        color: #000;
+                        overflow: hidden;
+                    }
+                    input{
+                        width: 100%;
+                        height: .68rem;
+                        line-height: .68rem;
+                        font-size: .26rem;
+                        text-indent: 10px;
+                        border: 1px solid #b5b5b6;
+                        box-sizing: border-box;
+                        overflow: hidden;
+                    }
+                } 
+                .tips{
+                    width: 100%;
+                    line-height: .32rem;
+                    font-size: .24rem;
+                    color: #000;
+                    overflow: hidden;
+                }                    
+            }
+            .bth_list{
+                width: 100%;
+                padding-top: .35rem;
+                overflow: hidden;
+                .bth{
+                    display: block;
+                    width: calc(50% - 0.2rem);
+                    height: .78rem;
+                    line-height: .78rem;
+                    color: #fff;
+                    font-size: .3rem;
+                    overflow: hidden;
+                    text-align: center;
+                    float: left;
+                }
+                .submit{
+                    background-color: #aa010e;
+                }
+                .reset{
+                    background-color: #053a7a;
+                    float: right;
+                }
+            }       
+        }    
+    
+    }
+}
+
+
