add mobile style two

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -99,18 +99,21 @@ img{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+    text-overflow: ellipsis;
     overflow: hidden;
 }
 .line2{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+    text-overflow: ellipsis;
     overflow: hidden;
 }
 .line3{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
     overflow: hidden;
 }
 .layou_fixed{
