--- a/src/scss/base/wechat.scss
+++ b/src/scss/base/wechat.scss
@@ -47,6 +47,7 @@
     }
     .qrcode{
         width: 3rem;
+        height: 3rem;
         padding-top: .82rem;
         text-align: center;
         overflow: hidden;
