--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -68,6 +68,9 @@
                     height: 224px;
                     background-color: #bebebe;
                     overflow: hidden;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .fonts_box{
                     width: 100%;
@@ -107,6 +110,9 @@
                     height: 90px;
                     background-color: #bebebe;
                     overflow: hidden;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .fonts_box{
                     width: 100%;
@@ -209,6 +215,9 @@
                     text-align: center;
                     background-color: #bebebe;
                     overflow: hidden;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .fonts_box{
                     width: 100%;
@@ -253,6 +262,9 @@
                     text-align: center;
                     background-color: #bebebe;
                     overflow: hidden;
+                    img{
+                        width: 100%;
+                    }
                 }
                 .fonts_box{
                     width: 100%;
