--- a/src/scss/speakers.scss
+++ b/src/scss/speakers.scss
@@ -1,55 +1,123 @@
 // speakers page scss
-.speakers{
-    position: relative;
-    padding-bottom: 120px;
-    .text_box{
-        padding-bottom: 50px;
-    }
-    .speakers_list{
-        width: 100%;
-        overflow: hidden;
-        .item{
-            width: 224px;
-            margin-top: 50px;
-            margin-right: 32px;
-            overflow: hidden;
-            float: left;
-            .logo_box{
-                width: 100%;
-                height: 224px;
-                border-radius: 50%;
-                text-align: center;
-                line-height: 224px;
-                background-color: #ebebeb;
-                overflow: hidden;
-            }
-            .fonts_box{
-                width: 100%;
-                color: #000;
-                font-size: 16px;
-                overflow: hidden;
-            }
-            .title{
-                margin-top: 12px;
-                height: 18px;
-                line-height: 18px;
-            }
-            .details{
-                font-size: 14px;
-                line-height: 18px;            
-            }
-            .number{
-                font-size: 12px;
-                line-height: 18px;  
-            }  
-            .tips{
-                height: 26px;
-                line-height: 26px; 
-                color: #727171;           
-            }           
+.pc_box{
+    .speakers{
+        position: relative;
+        padding-bottom: 120px;
+        .text_box{
+            padding-bottom: 50px;
         }
-        .item:nth-of-type(5n+0){
-            margin-right: 0;
+        .speakers_list{
+            width: 100%;
+            overflow: hidden;
+            .item{
+                width: 224px;
+                margin-top: 50px;
+                margin-right: 32px;
+                overflow: hidden;
+                float: left;
+                .logo_box{
+                    width: 100%;
+                    height: 224px;
+                    border-radius: 50%;
+                    text-align: center;
+                    line-height: 224px;
+                    background-color: #ebebeb;
+                    overflow: hidden;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                .fonts_box{
+                    width: 100%;
+                    color: #000;
+                    font-size: 16px;
+                    overflow: hidden;
+                }
+                .title{
+                    margin-top: 12px;
+                    height: 18px;
+                    line-height: 18px;
+                }
+                .details{
+                    font-size: 14px;
+                    line-height: 18px;            
+                }
+                .number{
+                    font-size: 12px;
+                    line-height: 18px;  
+                }  
+                .tips{
+                    height: 26px;
+                    line-height: 26px; 
+                    color: #727171;           
+                }           
+            }
+            .item:nth-of-type(5n+0){
+                margin-right: 0;
+            }
+        }
+    }
+}
+.mobile_box{
+    .speakers{
+        position: relative;
+        padding-bottom: 1.2rem;
+        .text_box{
+            padding-bottom: 0;
+            .title{
+                margin-bottom: 0;
+            }
+        }
+        .speakers_list{
+            width: 100%;
+            padding: 0 .2rem;
+            box-sizing: border-box;
+            overflow: hidden;
+            .item{
+                width: 2.2rem;
+                margin-top: .5rem;
+                margin-right: .25rem;
+                overflow: hidden;
+                float: left;
+                .logo_box{
+                    width: 100%;
+                    height: 2.2rem;
+                    border-radius: 50%;
+                    text-align: center;
+                    line-height: 2.2rem;
+                    background-color: #ebebeb;
+                    overflow: hidden;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                .fonts_box{
+                    width: 100%;
+                    color: #000;
+                    font-size: .26rem;
+                    overflow: hidden;
+                }
+                .title{
+                    margin-top: .1rem;
+                    line-height: .3rem;
+                }
+                .details{
+                    height: .6rem;
+                    line-height: .3rem;  
+                    font-size: .24rem;          
+                }
+                .tips{
+                    height: .6rem;
+                    line-height: .3rem; 
+                    color: #727171; 
+                    margin: .1rem 0;          
+                }           
+            }
+            .item:nth-of-type(3n+0){
+                margin-right: 0;
+            }
         }
     }
 }
