--- a/src/scss/supporters.scss
+++ b/src/scss/supporters.scss
@@ -1,71 +1,85 @@
 // speakers page scss
-.supporters{
-    position: relative;
-    padding-bottom: 120px;
-    .text_box{
-        padding-bottom: 0;
-    }
-    .supporters_list{
-        width: 100%;
-        overflow: hidden;
-        .item{
-            width: 224px;
-            margin-top: 45px;
-            margin-right: 32px;
-            overflow: hidden;
-            float: left;
-            .logo_box{
-                width: 100%;
-                height: 90px;
-                line-height: 90px;
-                text-align: center;
-                background-color: #ebebeb;
-                overflow: hidden;
-            }
-            .link{
-                width: 100%;
-                height: 50px;
-                line-height: 50px;
-                font-size: 12px;
-                color: #727171;
-            }  
+.pc_box{
+    .supporters{
+        position: relative;
+        padding-bottom: 120px;
+        .text_box{
+            padding-bottom: 0;
         }
-        .item:nth-of-type(5n+0){
-            margin-right: 0;
+        .supporters_list{
+            width: 100%;
+            overflow: hidden;
+            .item{
+                width: 224px;
+                margin-top: 45px;
+                margin-right: 32px;
+                overflow: hidden;
+                float: left;
+                .logo_box{
+                    width: 100%;
+                    height: 90px;
+                    line-height: 90px;
+                    text-align: center;
+                    background-color: #ebebeb;
+                    overflow: hidden;
+                }
+                .link{
+                    width: 100%;
+                    height: 50px;
+                    line-height: 50px;
+                    font-size: 12px;
+                    color: #727171;
+                }  
+            }
+            .item:nth-of-type(5n+0){
+                margin-right: 0;
+            }
         }
     }
 }
-.speaker_qrcode{
-    width: 520px;
-    height: 500px;  
-    padding: 30px 40px;
-    background-color: #fff; 
-    overflow: hidden; 
-    .close{
-        width: 32px;
-        height: 32px;
-        background: url("../assets/close.png") center no-repeat;
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        z-index: 2;
-        cursor: pointer;
+// mobile
+.mobile_box{
+    .supporters{
+        position: relative;
+        padding-bottom: 1rem;
+        .text_box{
+            padding-bottom: 0;
+            .title{
+                margin-bottom: .15rem;
+            }
+        }
+        .supporters_list{
+            width: 100%;
+            padding: 0 .2rem;
+            box-sizing: border-box;
+            overflow: hidden;
+            .item{
+                width: 50%;
+                margin-top: .4rem;
+                padding-right: .15rem;
+                box-sizing: border-box;
+                overflow: hidden;
+                float: left;
+                .logo_box{
+                    width: 100%;
+                    height: 1.36rem;
+                    line-height: 1.36rem;
+                    text-align: center;
+                    background-color: #ebebeb;
+                    overflow: hidden;
+                }
+                .link{
+                    width: 100%;
+                    height: .6rem;
+                    line-height: .6rem;
+                    font-size: .22rem;
+                    color: #727171;
+                }  
+            }
+            .item:nth-of-type(2n+0){
+                padding-right: 0;
+                padding-left: .15rem;
+            }
+        }
     }
-    .title{
-        width: 100%;
-        height: 46px;
-        line-height: 46px;
-        color: #000;
-        font-size: 24px;
-        font-weight: 600;
-        overflow: hidden;
-    }    
-    .text{
-        width: 100%;
-        line-height: 24px;
-        font-size: 14px;
-        color: #000;
-        margin-top: 40px;
-    }
-
 }
